tests/ucc/bind/good/simple-type.c
typedef int b;

int main(void)
{
    b a = 0;

    return a;
}
