tests/ucc/bind/bad/enum-redef-member.c
enum b
{
c,
};

enum a
{
c,
};

int main(void)
{
    return 0;
}
